// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async AuthenticationActions authenticateWithStoredToken matches snapshot 1`] = `
Object {
  "type": "AUTHENTICATE_WITH_STORED_TOKEN_REQUEST",
}
`;

exports[`async AuthenticationActions confirmation confirmationFailure matches snapshot 1`] = `
Object {
  "error": "error",
  "type": "CONFIRMATION_FAILURE",
}
`;

exports[`async AuthenticationActions confirmation confirmationSuccess matches snapshot 1`] = `
Object {
  "accessToken": "token",
  "type": "CONFIRMATION_SUCCESS",
}
`;

exports[`async AuthenticationActions passwordResetRequestSuccess matches snapshot 1`] = `
Object {
  "formValues": Object {},
  "type": "PASSWORD_RESET_REQUEST_SUCCESS",
}
`;

exports[`async AuthenticationActions refreshToken refreshToken matches snapshot 1`] = `
Object {
  "type": "REFRESH_TOKEN_REQUEST",
}
`;

exports[`async AuthenticationActions refreshToken refreshTokenFailure matches snapshot 1`] = `
Object {
  "type": "REFRESH_TOKEN_FAILURE",
}
`;

exports[`async AuthenticationActions refreshToken refreshTokenSuccess matches snapshot 1`] = `
Object {
  "type": "REFRESH_TOKEN_SUCCESS",
}
`;

exports[`async AuthenticationActions register registerFailure matches snapshot 1`] = `
Object {
  "error": null,
  "type": "REGISTER_FAILURE",
}
`;

exports[`async AuthenticationActions register registerSuccess matches snapshot 1`] = `
Object {
  "formValues": Object {},
  "type": "REGISTER_SUCCESS",
}
`;

exports[`async AuthenticationActions resendConfirmation resendConfirmationFailure matches snapshot 1`] = `
Object {
  "error": "error",
  "type": "RESEND_CONFIRMATION_FAILURE",
}
`;

exports[`async AuthenticationActions resendConfirmation resendConfirmationSuccess matches snapshot 1`] = `
Object {
  "formValues": Object {},
  "type": "RESEND_CONFIRMATION_SUCCESS",
}
`;

exports[`async AuthenticationActions resetPasswordSuccess matches snapshot 1`] = `
Object {
  "formValues": Object {},
  "type": "RESET_PASSWORD_SUCCESS",
}
`;

exports[`async AuthenticationActions signInSuccess matches snapshot 1`] = `
Object {
  "accessToken": "token",
  "type": "SIGN_IN_SUCCESS",
}
`;

exports[`async AuthenticationActions signOut signOutFailure matches snapshot 1`] = `
Object {
  "type": "SIGN_OUT_FAILURE",
}
`;

exports[`async AuthenticationActions signOut signOutRequest matches snapshot 1`] = `
Object {
  "type": "SIGN_OUT_REQUEST",
}
`;

exports[`async AuthenticationActions signOut signOutSuccess matches snapshot 1`] = `
Object {
  "type": "SIGN_OUT_SUCCESS",
}
`;

exports[`async AuthenticationActions verifyToken verifyTokenFailure matches snapshot 1`] = `
Object {
  "type": "VERIFY_TOKEN_FAILURE",
}
`;

exports[`async AuthenticationActions verifyToken verifyTokenRequest matches snapshot 1`] = `
Object {
  "accessToken": undefined,
  "type": "VERIFY_TOKEN_REQUEST",
}
`;

exports[`async AuthenticationActions verifyToken verifyTokenSuccess matches snapshot 1`] = `
Object {
  "type": "VERIFY_TOKEN_SUCCESS",
  "user": undefined,
}
`;
